# s21_cat

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-windows.yml
include/: s21_cat.h
src/: main.c  s21_cat.c
tests/: CMakeLists.txt  main.cc  test.txt
